# html_to_django

./: .gitignore  Attributes.md  CONTRIBUTING.md  LICENSE.txt  README.md  SECURITY.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: deploy.yml  main.yml  stylecheck.yml  tests.yml
docs/: Attributes.md
html_to_django/: __init__.py  converter.py  main.py
html_to_django/formatters/: __init__.py  assets_formatter.py  attr_formatter.py  block_formatter.py  command_formatter.py  for_formatter.py  for_wrap_formatter.py  if_formatter.py  include_formatter.py  remove_default_formatter.py  remove_formatter.py  static_formatter.py  style_formatter.py  style_raw_formatter.py  unwrap_formatter.py  var_formatter.py
tests/: test.html  test_main.py  tests_converter.py
tests/formatters/: tests_assets_formatter.py  tests_attr_formatter.py  tests_block_formatter.py  tests_command_formatter.py  tests_for_formatter.py  tests_for_wrap_formatter.py  tests_if_formatter.py  tests_include_formatter.py  tests_remove_default_formatter.py  tests_remove_formatter.py  tests_static_formatter.py  tests_style_formatter.py  tests_style_raw_formatter.py  tests_unwrap_formatter.py  tests_var_formatter.py
tests/test_project/: test.html
tests/test_project/something/: other.html
tests/test_project_expected_result/: test.n.html
tests/test_project_expected_result/something/: other.html
